--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
     "expo": "52.0.19",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
@@ -35,6 +36,7 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "4.0.6",
     "expo-web-browser": "~14.0.1",
+    "lucide-react-native": "^0.468.0",
     "moment": "^2.30.1",
     "moti": "^0.29.0",
     "nativewind": "^2.0.11",
@@ -51,7 +53,8 @@
     "react-native-toast-notifications": "^3.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
