--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-EXPO_PUBLIC_API_BASE_URL='http://i48g4kck48ksow4ssowws4go.138.68.103.18.sslip.io/api/v1'
+PM_TNT_API_BASE_URL='http://i48g4kck48ksow4ssowws4go.138.68.103.18.sslip.io/api/v1'
 
 
