--- a/app.json
+++ b/app.json
@@ -4,6 +4,9 @@
       "eas": {
         "projectId": "7f76ca1a-1b8d-4511-a0f8-9d4f4bef664f"
       }
+    },
+    "android": {
+      "package": "com.hueywhyte.pmapp"
     }
   }
 }
